--- a/profiles/templates/platform/buttons/helper.html
+++ b/profiles/templates/platform/buttons/helper.html
@@ -2,11 +2,11 @@
 
 {% with tooltip_title=tooltip_title tooltip_position=tooltip_position%}
 
-<span class="helper icofont-question"
-data-toggle="tooltip" 
-data-placement="{{ tooltip_position }}" 
-title="{{ tooltip_title }}"
+<span
+    class="helper icofont-question"
+    data-toggle="tooltip" 
+    data-placement="{{ tooltip_position }}" 
+    title="{{ tooltip_title }}"
 >
-
 </span>
 {% endwith %}
