--- a/profiles/templates/platform/navigation/_nav_club.html
+++ b/profiles/templates/platform/navigation/_nav_club.html
@@ -11,5 +11,5 @@
         </ul>
     </li>
 
-    <li><a href="{% url 'profiles:player_carrier'%}">{% trans 'Club' %}</a></li>
+    <li><a href="{% url 'profiles:my_carrier'%}">{% trans 'Club' %}</a></li>
 {% endif %}
