--- a/profiles/templates/profiles/cards/player/fantasy_card.html
+++ b/profiles/templates/profiles/cards/player/fantasy_card.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load playmaker %}
 
 <div class="card">
     <div class="card-body">
@@ -23,8 +24,12 @@
 
         </div>  <!-- end of card-text-->
         <div class="mt-4 text-center">
-            {% url 'profiles:player_fantasy' as button_url %}
-            {% include 'profiles/buttons/see_more.html' with button_url=button_url %}
+            {% if editable %}
+                {% url 'profiles:my_fantasy' as button_url %}
+            {% else %}
+                {% url 'profiles:player_fantasy' slug=show_user.profile.slug as button_url %}
+            {% endif %}
+            {% seemore_link button_url %}
         </div>
     </div>
 </div>
