--- a/backend/templates/partials/toasts.html
+++ b/backend/templates/partials/toasts.html
@@ -13,20 +13,8 @@
 {% endfor %}
 </div-->
 {% for message in messages %}
-  <!-- Then put toasts-messages -->
-  <div class="toast" role="alert" data-delay="13000" aria-live="assertive" aria-atomic="true">
-    <div class="toast-header">
-      <img src="..." class="rounded mr-2" alt="...">
-      <strong class="mr-auto">{{ message.tags }}</strong>
-      <small class="text-muted">just now</small>
-      <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="toast-body">
-      {{ message|safe }}
-    </div>
-  </div>
+    <!-- Then put toasts-messages -->
+    {% include 'partials/_toast.html' with message=message %}
 {% endfor %}
   </div>
 </div>
