--- a/profiles/templates/platform/navigation/_nav.html
+++ b/profiles/templates/platform/navigation/_nav.html
@@ -1,6 +1,6 @@
 {% load i18n %}
-<li><a href="{% url 'profiles:inquiry_me'%}">{% trans 'Zapytania' %}</a></li>
-<li><a href="{% url 'profiles:observe_me'%}">{% trans 'Obserwowani' %}</a></li>
+<li><a href="{% url 'profiles:my_requests'%}">{% trans 'Zapytania' %}</a></li>
+<li><a href="{% url 'profiles:my_observers'%}">{% trans 'Obserwowani' %}</a></li>
 <li class="drop-down"><a href="">Bazy</a>
     <ul>
         <li><a href="{% url 'soccerbase:players' %}">Piłkarzy</a></li>
