--- a/profiles/templates/profiles/observers.html
+++ b/profiles/templates/profiles/observers.html
@@ -1,20 +1,13 @@
 
 {% extends "profiles/base.html" %}
 
+{% load playmaker %}
 {% load i18n %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% load thumbnail %}
 
 {% block title %}{{ block.super }} {% trans 'Obserwowani' %} {% endblock %}
-
-
-
-{% block header %}
-    {% with menuitems_template="profiles/partials/_nav_player.html" %}
-        {{ block.super }}
-    {% endwith %}
-{% endblock %}
 
 
 
@@ -25,10 +18,15 @@
 <div class="container" data-aos="fade-up"> 
     <div class='row justify-content-center'>
         <div class='col-md-12'>
-            {% include 'profiles/partials/_game_table.html' with games=page_obj %}       
+        {% for item in page_obj %}
+            {% include 'profiles/partials/_two_table.html' with key=item.target.first_name|add:' '|add:item.target.last_name value='obserwowany' %} {% profile_link item.target %}
+
+        {% empty %}
+            nikogo nie obserwujesz
+        {% endfor %} 
         </div>   
         <div class='col-md-12'>
-            {% include 'profiles/partials/_pagination.html' %}
+            {% include 'platform/partials/_pagination.html' %}
         </div>
     </div> <!-- 'row' -->
 </div>
