--- a/profiles/templates/platform/buttons/action_button.html
+++ b/profiles/templates/platform/buttons/action_button.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
-
-{% with button_class="btn-pm btn-pm-sm" %}
+{% if not off %}
+  {% with button_class="btn-pm btn-pm-sm" %}
     
     {% if modals.register.load %}
         <a href="#" class="{{ button_class }}" data-toggle="modal" data-target="#{{ modals.register.name }}">
@@ -25,4 +25,5 @@
         </a>
     {% endif %}
 
-{% endwith %}
+  {% endwith %}
+{% endif %}
