--- a/profiles/templates/platform/navigation/_nav_club.html
+++ b/profiles/templates/platform/navigation/_nav_club.html
@@ -1,15 +1,9 @@
 {% load i18n %}
 {% load static %}
+{% load playmaker %}
+
 
 {% if user.is_authenticated %}
-    {% include 'platform/navigation/_nav.html'%}
-    <li class="drop-down"><a href="">Bazy</a>
-        <ul>
-            <li><a href="{% url 'soccerbase:players' %}">Piłkarzy</a></li>
-            <li><a href="{% url 'soccerbase:coaches' %}">Trenerów</a></li>
-            <li><a href="{% url 'soccerbase:teams' %}">Klubów</a></li>
-        </ul>
-    </li>
-
-    <li><a href="{% url 'profiles:my_carrier'%}">{% trans 'Club' %}</a></li>
+    {% include 'platform/navigation/_nav.html'%}            
+    <li>{% get_my_club_link %}</li>
 {% endif %}
