--- a/profiles/templates/platform/navigation/_nav_coach.html
+++ b/profiles/templates/platform/navigation/_nav_coach.html
@@ -1,8 +1,8 @@
 {% load i18n %}
 {% load static %}
+{% load playmaker %}
 
 {% if user.is_authenticated %}
     {% include 'platform/navigation/_nav.html'%}
-    <li><a href="{% url 'profiles:show_self'%}">{% trans 'Twój zespół' %}</a></li>
-    {% comment %} <!--li><a href="{% url 'profiles:player_carrier'%}">{% trans 'Club' %}</a></li --> {% endcomment %}
+    <li>{% get_my_team_link %}</li>
 {% endif %}
