--- a/profiles/templates/profiles/edit_account_settings.html
+++ b/profiles/templates/profiles/edit_account_settings.html
@@ -54,7 +54,8 @@
  
         <div class="row p-3 mb-4">
           <div class="col-sm-3">
-            <i class="ri-check-double-line"></i> {% trans 'Ustaw nowy adres e-mail bądź dodaj nowy adres z którego będziesz chiał się logować' %}
+            <i class="ri-check-double-line"></i> 
+            {% trans 'Ustaw nowy adres e-mail bądź dodaj nowy adres z którego będziesz chciał się logować' %}
           </div>
 
           <div class="col-sm-6">
