--- a/profiles/templates/profiles/how_to.html
+++ b/profiles/templates/profiles/how_to.html
@@ -20,8 +20,8 @@
         <div class="circle font-weight-bold">1</div>
       </div>
       <div class="col-6">
-        <h5>Werifikacja konta</h5>
-        <p>W pierwszej kolejności by korzystać z elementów platformy PlayMaker.pro należy zwerifikować konto. Wystarczy uzupełnić dane np. tu: { link do modala }</p>
+        <h5>Weryfikacja konta</h5>
+        <p>W pierwszej kolejności by korzystać z elementów platformy PlayMaker.pro należy zweryfikować konto. Wystarczy uzupełnić dane np. tu: { link do modala }</p>
       </div>
     </div>
     <!--path between 1-2-->
