--- a/profiles/templates/profiles/modals/_verification_modal.html
+++ b/profiles/templates/profiles/modals/_verification_modal.html
@@ -8,7 +8,7 @@
   <div class="modal-dialog modal-dialog-centered modal-fullscreen-sm-down">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title" id="verificationModalLabel">{% trans 'Wymagana werifikacja konta' %}</h3>
+        <h3 class="modal-title" id="verificationModalLabel">{% trans 'Wymagana weryfikacja konta' %}</h3>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true"><i class="icofont-close-circled main-color"></i></span>
         </button>
@@ -17,7 +17,7 @@
 
       <div class="modal-body">
       <div>
-        By w pełni korzystać z platformy <strong>{% include 'platform/partials/brandname.html' %}</strong> należy zwerifikować konto uzupełniając poniższe dane.
+        By w pełni korzystać z platformy <strong>{% include 'platform/partials/brandname.html' %}</strong> należy zweryfikować konto uzupełniając poniższe dane.
 
       </div>
     
@@ -26,7 +26,7 @@
         <span id="verification-form-body"> </span>
 
         <div class="modal-footer">
-                <button class="btn-pm" type="submit" name="update" value="Update" id="submit-id-update">{% trans 'ZWERIFIKUJ KONTO' %}</button>
+                <button class="btn-pm" type="submit" name="update" value="Update" id="submit-id-update">{% trans 'ZWERYFIKUJ KONTO' %}</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">{% trans 'PÓŹNIEJ' %}</button>
               </div>
       </form>
