--- a/profiles/templates/profiles/buttons/edit.html
+++ b/profiles/templates/profiles/buttons/edit.html
@@ -1,7 +1,7 @@
 
    
 {% with icon='edit'  text=_('Edytuj profil')%}
-    <a href="{% url 'profiles:edit_self' %}" class="card-link btn-pm btn-pm-sm">
+    <a href="{% url 'profiles:edit_self' %}" class="btn-act">
         <i class="icofont-{{icon}}"></i> {{ text }} 
     </a>
 {% endwith %}
